Working setting of WiFi

--- a/SW/Firmware/data/wifiConfig.html
+++ b/SW/Firmware/data/wifiConfig.html
@@ -13,7 +13,7 @@
     <br> údajů k lokální síti
 </h2>
 <div class="form-center-wrapper">
-    <form>
+    <form method="post">
         <label for="ssid">Název Wi-Fi sítě</label>
         <br>
         <input name="ssid" id="ssid" type="text">
